@@ -1,3 +1,8 @@
+2007-07-28  Mickael Remond  <mickael.remond@process-one.net>
+
+	* src/mod_roster_odbc.erl: Better error management when bad JID in
+	roster table (EJAB-289).
+
 2007-07-26  Mickael Remond  <mickael.remond@process-one.net>
 
 	* src/web/ejabberd_web_admin.erl: Code clean-up.
